--- a/main/platformio.ini
+++ b/main/platformio.ini
@@ -15,7 +15,9 @@ framework = arduino
 
   ; --- DEPENDÊNCIAS DE BIBLIOTECAS EXTERNAS ---
 lib_deps =
-    blynklabs/Blynk
+    ;508 ; Blynk (BlynkLabs)
+    ;blynklabs/Blynk
+    blynkkk/Blynk@^1.3.2
     paulstoffregen/OneWire
     milesburton/DallasTemperature
     adafruit/RTClib
@@ -23,7 +25,9 @@ lib_deps =
     bblanchon/ArduinoJson
     adafruit/Adafruit GFX Library
     adafruit/Adafruit SSD1306
-    luni64/Button2
+    ;luni64/Button2
+    ;60                  ; Button2 (luni64/Button2)
+    lennarthennigs/Button2@^2.5.0
 
 
 [env:native]
@@ -37,7 +41,9 @@ build_flags =
 
  ; --- DEPENDÊNCIAS DE BIBLIOTECAS EXTERNAS ---
 lib_deps =
-    blynklabs/Blynk
+    ;508 ; Blynk (BlynkLabs)
+    ;blynklabs/Blynk
+    blynkkk/Blynk@^1.3.2
     paulstoffregen/OneWire
     milesburton/DallasTemperature
     adafruit/RTClib
@@ -45,6 +51,8 @@ lib_deps =
     bblanchon/ArduinoJson
     adafruit/Adafruit GFX Library
     adafruit/Adafruit SSD1306
-    luni64/Button2
+    ;luni64/Button2
+    ;60                  ; Button2 (luni64/Button2)
+    lennarthennigs/Button2@^2.5.0
 
 
