Adjusted global variables and prototypes
A complete review of global variavles, prototypes and defines to allow consstency across functions

--- a/main/platformio.ini
+++ b/main/platformio.ini
@@ -15,8 +15,6 @@ framework = arduino
 
   ; --- DEPENDÊNCIAS DE BIBLIOTECAS EXTERNAS ---
 lib_deps =
-    ;508 ; Blynk (BlynkLabs)
-    ;blynklabs/Blynk
     blynkkk/Blynk@^1.3.2
     paulstoffregen/OneWire
     milesburton/DallasTemperature
@@ -25,9 +23,9 @@ lib_deps =
     bblanchon/ArduinoJson
     adafruit/Adafruit GFX Library
     adafruit/Adafruit SSD1306
-    ;luni64/Button2
-    ;60                  ; Button2 (luni64/Button2)
     lennarthennigs/Button2@^2.5.0
+    jchristensen/DS3232RTC@^3.1.2
+   
 
 
 [env:native]
@@ -41,8 +39,6 @@ build_flags =
 
  ; --- DEPENDÊNCIAS DE BIBLIOTECAS EXTERNAS ---
 lib_deps =
-    ;508 ; Blynk (BlynkLabs)
-    ;blynklabs/Blynk
     blynkkk/Blynk@^1.3.2
     paulstoffregen/OneWire
     milesburton/DallasTemperature
@@ -51,8 +47,8 @@ lib_deps =
     bblanchon/ArduinoJson
     adafruit/Adafruit GFX Library
     adafruit/Adafruit SSD1306
-    ;luni64/Button2
-    ;60                  ; Button2 (luni64/Button2)
     lennarthennigs/Button2@^2.5.0
+    jchristensen/DS3232RTC@^3.1.2
+   
 
 
